# OPEN_GL_3D_dungeon_mastery_game

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
ressources/models/cudgel/: NordsTenderizer_tilted.fbx
ressources/models/moon_potion_mask/: flask.dae
ressources/models/rosetta/: fiveHundred.mtl
ressources/models/rosetta-stone/: license.txt  scene.gltf
shaders/: basic_shader.fs  basic_shader.vs  lava_shader.fs  light_cube_shader.fs  light_shader.fs  light_shader.vs  normal_maps_shader.fs  normal_maps_shader.vs  normal_parallax_shader.fs  normal_specular_emission_shader.fs  normal_specular_emission_shader.vs  text_shader.fs  text_shader.vs
src/: IObjectLogic.h  ITerrainLogic.h  actor.h  camera.cpp  camera.h  context.h  exit.cpp  flask.cpp  game.h  glad.c  hero.cpp  hero.h  lava.cpp  mainb.cpp  map.cpp  map.h  mesh.h  model.h  monster.cpp  monster.h  renderer.cpp  renderer.h  rosetta.cpp  shader.cpp  shader.h  sound.h  textRenderer.cpp  textRenderer.h  texture.cpp  texture.h
